# ndc-hub

./: .envrc  .envrc.local  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  flake.nix  justfile  main.ts
.buildkite/: pipeline.yml
.buildkite/hooks/: pre-command
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: config.yml  internal-issues-only.md  new-issues-are-meant-to-be-created-by-hasura-collaborators-only.md
.github/workflows/: build-ddn-workspace-env-loader.yaml  build-ddn-workspace.yaml  build.yaml  check-docs-labels.yml  ddn-assets.yaml  ddn-workspace-testing.yaml  format.yaml  go-tests.yaml  gokakashi-scan.yaml  lint.yaml  machete.yaml  nix.yaml  pr-scan.yaml  registry-e2e-tests.yaml  registry-updates-prod.yaml  registry-updates-test.yaml  registry-updates.yaml  test.yaml  validate-connector-metadata-schema.yml  validate.yaml
api_schemas/: Cargo.toml
api_schemas/src/: main.rs
connector-metadata-types/: .gitignore  README.md  compareSchema.ts  connectorTypes.ts  package-lock.json  package.json  schema.json  schemaGenerator.ts  tsconfig.json
connector-metadata-types/src/: connectorTypes.ts  index.ts  schemaGenerator.ts
ddn-workspace/: Dockerfile  Dockerfile.test  Dockerfile_EnvLoader  README.md  compose.yaml  connector-versions.json
ddn-workspace/scripts/: build-with-versions.sh  entrypoint.sh  install-code-server.sh  install-plugins.sh  show_supported_connector_versions.sh  update-connector-version.sh
docker/data/: Dockerfile
docker/server/: Caddyfile  Dockerfile
docs/: code-of-conduct.md  contributing.md  index.md  security.md  support.md
registry-automation/: README.md  changed_files.json  go.mod  go.sum  main.go
registry-automation/cmd/: ci.go  ci_test.go  download_artifacts.go  e2e.go  gcp.go  registryDb.go  registry_db.go  root.go  types.go  utils.go  validate.go
registry-automation/cmd/scan/: gokakashi.go  scan.go  trivy.go
registry-automation/e2e-testing/: README.md  bun.lockb  ddn-workspace-testing.ts  ddn-workspace.ts  index.js  index.ts  ndc.ts  package-lock.json  package.json  utils.js  utils.ts
registry-automation/pkg/: utils.go
registry-automation/pkg/ndchub/: connector_packaging.go  metadata.go  ndchub.go  packaging_spec.go  plugins_spec.go  test_config.go
registry-automation/pkg/validate/: connector_metadata.go  connector_metadata_test.go  connector_packaging.go  connector_packaging_test.go  test_config.go
registry-automation/pkg/vulnerabilityscan/: gokakashi.go  trivy.go
registry/aurora/: README.md  metadata.json
registry/azure-cosmos/: README.md  metadata.json
registry/citus/: README.md  metadata.json
registry/clickhouse/: README.md  metadata.json
registry/cockroach/: README.md  metadata.json
registry/duckdb/: README.md  metadata.json
registry/elasticsearch/: README.md  metadata.json
registry/go/: README.md  metadata.json
registry/graphql/: README.md  metadata.json
registry/hasura/athena/: README.md  metadata.json
registry/hasura/aurora/: README.md  metadata.json
registry/hasura/azure-cosmos/: README.md  metadata.json
registry/hasura/bigquery/: README.md  metadata.json
registry/hasura/bigquery-jdbc/: README.md  metadata.json
registry/hasura/calcite/: README.md  metadata.json
registry/hasura/cassandra/: README.md  metadata.json
registry/hasura/citus/: metadata.json
registry/hasura/clickhouse-promptql/: README.md  metadata.json
registry/hydra/: README.md  metadata.json
registry/jvm-mysql/: metadata.json
registry/jvm-oracle/: metadata.json
registry/jvm-snowflake/: README.md  metadata.json
registry/mongodb/: README.md  metadata.json
registry/mysql/: README.md  metadata.json
registry/neon/: README.md  metadata.json
registry/nodejs-lambda/: README.md  metadata.json
registry/open-api-lambda/: README.md  metadata.json
registry/oracle/: metadata.json
registry/postgres/: README.md  metadata.json
registry/postgres-alloydb/: README.md  metadata.json
registry/postgres-azure/: README.md  metadata.json
registry/postgres-cosmos/: README.md  metadata.json
registry/postgres-gcp/: README.md  metadata.json
registry/postgres-timescaledb/: README.md  metadata.json
registry/qdrant/: README.md  metadata.json
registry/sendgrid/: README.md  metadata.json
registry/snowflake/: metadata.json
registry/spanner/: README.md  metadata.json
registry/sqlserver/: README.md  metadata.json
registry/stripe/: README.md  metadata.json
registry/turso/: README.md  metadata.json
registry/typescript-deno/: README.md  metadata.json
registry/yugabyte/: README.md  metadata.json
rfcs/: 0000-deployment.md  0001-packaging.md  0002-cli-guidelines.md  0002-distribution-gh.md  0002-distribution.md  0004-native-packaging.md  0005-docker-cli-plugin.md  0006-connector-publishing-automation.md  0006-env-mapping.md  0007-packaging-documentation-page.md  0009-connector-upgrades-dx.md  0009-mandatory-env-vars.md  0010-connector-upgrades-dx.md  0011-cli-and-connector-packaging.md  0012-native-workspace-integration.md  0013-spec-version-in-connector-metadata.md  006-print-schema-capabilities.md  008-print-schema-and-capabilities.md
rust-connector-sdk/: Cargo.toml
rust-connector-sdk/src/: check_health.rs  connector.rs  default_main.rs  json_rejection.rs  json_response.rs  lib.rs  metrics.rs  routes.rs  secret.rs  tracing.rs
rust-connector-sdk/src/connector/: example.rs
rust-connector-sdk/src/default_main/: v2_compat.rs
rust-connector-sdk/tests/json_schema/: secret_value.jsonschema
scripts/: update-ndc-postgres.sh
src/: connector.rs  default_main.rs  lib.rs  routes.rs
ts-connector-sdk/: generate-types.ts  package-lock.json  package.json  tsconfig.json
ts-connector-sdk/schemas/: CapabilitiesResponse.d.ts  CapabilitiesResponse.schema.json  ErrorResponse.d.ts  ErrorResponse.schema.json  ExplainResponse.d.ts  MutationRequest.d.ts  MutationResponse.d.ts  QueryRequest.d.ts  QueryResponse.d.ts  QueryResponse.schema.json  SchemaResponse.d.ts
ts-connector-sdk/src/: configuration_server.ts  connector.ts  error.ts  index.ts  server.ts
(+1059 files in other folders)
