[package]
name = "ndc-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ndc_sdk"
path = "src/lib.rs"

[[bin]]
name = "ndc_hub_example"
path = "bin/main.rs"

[features]
ndc-test = ["dep:ndc-test"]
default = ["ndc-test"]

[dependencies]
ndc-client = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.1.0" }
ndc-test = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.1.0", optional = true }

async-trait = "^0.1.74"
axum = "^0.6.20"
axum-extra = "^0.8.0"
bytes = "1.5.0"
clap = { version = "^4.4.7", features = ["derive", "env"] }
http = "^0.2"
mime = "0.3.17"
opentelemetry = { version = "^0.22", default-features = false }
opentelemetry-http = "0.11.0"
opentelemetry-otlp = { version = "^0.15.0", features = ["reqwest-client", "gzip-tonic", "tls", "tls-roots", "http-proto"] }
opentelemetry-semantic-conventions = "^0.14.0"
opentelemetry_api = "^0.20.0"
opentelemetry_sdk = { version = "^0.22.1", features = ["rt-tokio"] }
prometheus = "^0.13.3"
reqwest = "^0.11.22"
serde = { version = "^1.0.192", features = ["derive"] }
serde_json = { version = "^1.0.108", features = ["raw_value"] }
thiserror = "^1.0"
tokio = { version = "^1.34.0", features = ["fs", "signal"] }
tower-http = { version = "^0.4.4", features = ["cors", "trace", "validate-request"] }
tracing = "^0.1.40"
tracing-opentelemetry = "^0.23.0"
tracing-subscriber = { version = "^0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
url = "2.4.1"

[dev-dependencies]
axum-test-helper = "0.3.0"
